Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-11403

lov_io_init_empty() Page fault on a file without stripes

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.13.0, Lustre 2.12.3
    • Upstream
    • None
    • 3
    • 9223372036854775807

      REFORMAT=yes RACER_ENABLE_DOM=false MOUNT_2=yes SLOW=yes sh racer.sh

       

      LustreError: 20867:0:(lov_io.c:1481:lov_io_init_empty()) Page fault on a file without stripes: [0x200000402:0x116f5:0x0]
      BUG: unable to handle kernel NULL pointer dereference at           (null)
      IP: [<ffffffffa0cc04e8>] ll_fault+0xb8/0x610 [lustre]
      PGD 0 
      Oops: 0002 [#1] SMP 
      Modules linked in: zfs(PO) zunicode(PO) zavl(PO) icp(PO) zcommon(PO) znvpair(PO) spl(O) lustre(O) ofd(O) osp(O) lod(O) ost(O) mdt(O) mdd(O) mgs(O) osd_ldiskfs(O) ldiskfs(O) lquota(O) lfsck(O) obdecho(O) mgc(O) lov(O) mdc(O) osc(O) lmv(O) fid(O) fld(O) ptlrpc(O) obdclass(O) ksocklnd(O) lnet(O) libcfs(O)
      CPU: 0 PID: 20867 Comm: systemd-coredum Tainted: P           O   ------------   3.10.0 #5
      Hardware name: Bochs Bochs, BIOS Bochs 01/01/2011
      task: ffff8800aebaa0c0 ti: ffff88006485c000 task.ti: ffff88006485c000
      RIP: 0010:[<ffffffffa0cc04e8>]  [<ffffffffa0cc04e8>] ll_fault+0xb8/0x610 [lustre]
      RSP: 0018:ffff88006485fc70  EFLAGS: 00010246
      RAX: 0000000000000001 RBX: 0000000000000100 RCX: 00000000c0000100
      RDX: ffffffff81ab94c0 RSI: ffff8800aebaa0c0 RDI: ffff88011fc15b00
      RBP: ffff88006485fcd8 R08: ffff88006485c000 R09: 00000000000004c1
      R10: 000000009837f050 R11: ffff88011fc15b70 R12: 0000000000000000
      R13: ffff8801157a4b60 R14: ffff88006485fce8 R15: ffff8800aebaa0c0
      FS:  00007f4c1846c940(0000) GS:ffff88011fc00000(0000) knlGS:0000000000000000
      CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
      CR2: 0000000000000000 CR3: 00000000689c0000 CR4: 00000000000007b0
      Call Trace:
       [<ffffffff811649f9>] __do_fault.isra.12+0x79/0xd0
       [<ffffffff8116d563>] ? __vma_link_file+0x43/0x80
       [<ffffffff81164a88>] do_read_fault.isra.14+0x38/0x170
       [<ffffffff811703f7>] ? mmap_region+0x207/0x740
       [<ffffffff8116a7ae>] handle_mm_fault+0x77e/0x11a0
       [<ffffffff815b1078>] __do_page_fault+0x1b8/0x4b0
       [<ffffffff815b13e3>] trace_do_page_fault+0x43/0xd0
       [<ffffffff815b08ed>] do_async_page_fault+0x5d/0xa0
       

            pfarrell Patrick Farrell (Inactive)
            bzzz Alex Zhuravlev
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: